Changed Interaction Handling, Prevented Movement While Interacting, Fixed Issue Where Pressure Plate Activated With Interaction Trigger Rather Than Collision Trigger

--- a/CityCrawlers/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CityCrawlers/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -128,18 +128,17 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/DataTypes/Enumerator
+ContentBrowserTab1.SelectedPaths=/Game/Interactables/RunOver/PressurePlates
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Interactables/InputToInteract/BuffPacks/BP_HealthPackBase.BP_HealthPackBase
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Characters/Base/BP_BaseCharacter.BP_BaseCharacter
-OpenAssetsAtExit=/Game/UI/Base/WidgetBP_BaseUI.WidgetBP_BaseUI
 OpenAssetsAtExit=/Game/Interactables/InputToInteract/Base/BP_BaseInteractable.BP_BaseInteractable
-OpenAssetsAtExit=/Game/Interactables/InputToInteract/BuffPacks/BP_BuffPackBase.BP_BuffPackBase
+OpenAssetsAtExit=/Game/Interactables/InputToInteract/Trap/BP_TrapBase.BP_TrapBase
+OpenAssetsAtExit=/Game/Interactables/RunOver/PressurePlates/BP_PressurePlateBase.BP_PressurePlateBase
 
 [RootWindow]
 ScreenPosition=X=43.000 Y=0.000
@@ -804,6 +803,10 @@ Voice.TimeStamp=2018.12.07-22.20.10
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.12.07-22.19.51
 MovieSceneCapture.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.12.07-22.20.00
+SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.12.07-22.19.43
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -882,26 +885,26 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Base/BP_BaseCharacter
-MRUItem1=/Game/Interactables/InputToInteract/BuffPacks/BP_HealthPackBase
-MRUItem2=/Game/Interactables/InputToInteract/HealthPack/BP_HealthPackBase
-MRUItem3=/Game/GameMode/GM_BaseGameMode
-MRUItem4=/Game/Interactables/InputToInteract/Base/BP_BaseInteractable
-MRUItem5=/Game/UI/Base/WidgetBP_BaseUI
-MRUItem6=/Game/Interactables/InputToInteract/Trap/BP_TrapBase
-MRUItem7=/Game/Interactables/RunOver/PressurePlates/BP_PressurePlateBase
-MRUItem8=/Game/Interactables/RunOver/Base/BP_BaseRunOver
-MRUItem9=/Game/Interactables/InputToInteract/Base/BP_TrapBase
-MRUItem10=/Game/Interactables/InputToInteract/Base/BP_SwitchBase
-MRUItem11=/Game/DataTypes/Enumerator/EDirection
-MRUItem12=/Game/Interactables/RunOver/Toggles/BP_BaseDoubleDoorToggle
-MRUItem13=/Game/Interactables/RunOver/Toggles/BP_SlidingDoor
-MRUItem14=/Game/Interactables/RunOver/Toggles/BP_ToggleBase
-MRUItem15=/Game/Interactables/RunOver/PressurePlates/BP_PressurePlateInteractable
-MRUItem16=/Game/Interactables/RunOver/Base/BP_PressurePlateBase
-MRUItem17=/Game/Interactables/RunOver/Toggles/BP_DoubleDoorToggle
-MRUItem18=/Game/Interactables/InputToInteract/PressurePlates/BP_PressurePlateInteractable
-MRUItem19=/Game/Interactables/Toggles/BP_DoubleDoorToggle
+MRUItem0=/Game/Interactables/RunOver/PressurePlates/BP_PressurePlateBase
+MRUItem1=/Game/Interactables/RunOver/Base/BP_BaseRunOver
+MRUItem2=/Game/Interactables/InputToInteract/BuffPacks/BP_HealthPackBase
+MRUItem3=/Game/Interactables/InputToInteract/BuffPacks/BP_BuffPackBase
+MRUItem4=/Game/Interactables/InputToInteract/Trap/BP_TrapBase
+MRUItem5=/Game/Interactables/InputToInteract/Base/BP_BaseInteractable
+MRUItem6=/Game/Characters/Base/BP_BaseCharacter
+MRUItem7=/Game/Interactables/InputToInteract/HealthPack/BP_HealthPackBase
+MRUItem8=/Game/GameMode/GM_BaseGameMode
+MRUItem9=/Game/UI/Base/WidgetBP_BaseUI
+MRUItem10=/Game/Interactables/InputToInteract/Base/BP_TrapBase
+MRUItem11=/Game/Interactables/InputToInteract/Base/BP_SwitchBase
+MRUItem12=/Game/DataTypes/Enumerator/EDirection
+MRUItem13=/Game/Interactables/RunOver/Toggles/BP_BaseDoubleDoorToggle
+MRUItem14=/Game/Interactables/RunOver/Toggles/BP_SlidingDoor
+MRUItem15=/Game/Interactables/RunOver/Toggles/BP_ToggleBase
+MRUItem16=/Game/Interactables/RunOver/PressurePlates/BP_PressurePlateInteractable
+MRUItem17=/Game/Interactables/RunOver/Base/BP_PressurePlateBase
+MRUItem18=/Game/Interactables/RunOver/Toggles/BP_DoubleDoorToggle
+MRUItem19=/Game/Interactables/InputToInteract/PressurePlates/BP_PressurePlateInteractable
 
 [DetailCategories]
 BP_BaseCharacter_C.Tick=True
@@ -1669,6 +1672,10 @@ BP_BaseCharacter_C.Movement=True
 BP_BaseCharacter_C.Player=True
 BP_BaseCharacter_C.Flags=True
 BP_HealthPackBase_C.TransformCommon=True
+BP_BaseInteractable_C.Flags=True
+BP_TrapBase_C.Flags=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -1683,6 +1690,8 @@ BP_HealthPackBase_C.TransformCommon=True
 /Game/GameMode/GM_BaseGameMode.GM_BaseGameMode=0
 /Game/Interactables/RunOver/Base/BP_BaseRunOver.BP_BaseRunOver=0
 /Game/Interactables/InputToInteract/Trap/BP_TrapBase.BP_TrapBase=0
+/Game/Interactables/InputToInteract/BuffPacks/BP_HealthPackBase.BP_HealthPackBase=0
+/Game/Interactables/InputToInteract/BuffPacks/BP_BuffPackBase.BP_BuffPackBase=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Interactables/InputToInteract/BuffPacks/BP_HealthPackBase.BP_HealthPackBase;
